--- a/project_hub/src/pages/projects/MealGenerator/styles.css
+++ b/project_hub/src/pages/projects/MealGenerator/styles.css
@@ -1,3 +1,67 @@
-.meal-container{
-    max-width: none;
+li {
+    text-align: left !important;
+}
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+  
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.recipe-info{
+    display: flex;
+    justify-content: space-evenly;
+}
+.recipe-thumb{
+    width: 45%;
+}
+.recipe-ingredients{
+    width: 45%;
+}
+.recipe-ingredients ul{
+    padding-left: 5rem;
+}
+.recipe-thumb img{
+    height: 100%;
+    max-width: 100%;
+    display: block;
+    margin: auto;
+}
+.recipe-instructions{
+    width: 950px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+.recipe-instructions p{
+    margin-bottom: 30px;
+    word-wrap: break-word;
+}
+
+.recipe-source {
+    margin-left: auto;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+.recipe-source:hover {
+    border-color: #646cff;
+}
+.recipe-source:focus,
+.recipe-source:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
 }
